kfreebsd-8 (8.1-3) unreleased; urgency=high

  * Backport adaptive_machine_arch support from -CURRENT, change and amd64
    machine into i386 for 32-bit binaries.
  * Call postinst/postrm hooks as defined by the "Policy for Linux kernel, 
    initramfs, boot loader update process".

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 06 Aug 2010 06:58:01 +0200

kfreebsd-8 (8.1-2) unstable; urgency=low

  * Backport apm emulation on amd64 from -CURRENT as it is required by a few
    packages:
      - patches/105_apm_amd64.diff
  * Compress the sources with xz instead of bz2 to save space.

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 30 Jul 2010 21:06:07 +0200

kfreebsd-8 (8.1-1) unstable; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_8_1_0_RELEASE)
     - 000_*.diff, 105_pts.diff merged upstream
  * Include planned errata notices (already in 8-STABLE)
     - 000_ata.diff
     - 000_ufs_lookup.diff

  [ Guillem Jover ]
  * Use kfreebsd-any instead of explicit architecture list.
  * Fold Build-Depends field into several lines.
  
  [ Aurelien Jarno ]
  * debian/control.in: bump Standards-Version to 3.9.1 (no changes).

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 26 Jul 2010 15:50:57 +0200

kfreebsd-8 (8.0-11) unstable; urgency=medium

  * Also disable -fstack-protector for modules, now that 
    freebsd-buildutils enable it by default. Closes: #587630.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 20 Jul 2010 00:00:55 +0200

kfreebsd-8 (8.0-10) unstable; urgency=high

  * Fix lost mbuf flag resulting in data corruption
    (FreeBSD-SA-10:07.mbuf / CVE-2010-2693).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 13 Jul 2010 20:18:34 +0200

kfreebsd-8 (8.0-9) unstable; urgency=low

  [ Aurelien Jarno ]
  * Default to netinet6.ip6.v6only=0 and netinet6.ip6.accept_rtadv=1
    to match the Linux kernel defaults.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 23 Jun 2010 21:31:54 +0200

kfreebsd-8 (8.0-8) unstable; urgency=low

  [ Aurelien Jarno ]