@@ -25,6 +25,13 @@ VERSION="@VERSION@"
 
 case "$1" in
     remove)
+        # Sanitize and quote maintaner script parameters
+        for p in "$@"; do
+            q="$(echo "$p" | sed -e "s/'/'\\''/g")"
+            DEB_MAINT_PARAMS="$DEB_MAINT_PARAMS '$q'"
+        done
+        export DEB_MAINT_PARAMS
+
         # Run /etc/kernel-img.conf postrm hook if defined
         postrm_hook=$(sed '/^\s*postrm_hook/!d;s/.*=\s*//' $KERNEL_IMG_CONF 2>/dev/null || true)
         if [ -n "$postrm_hook" ] ; then
@@ -32,12 +39,13 @@ case "$1" in
             $postrm_hook "$VERSION" "/boot/kfreebsd-$RELEASE.gz"
         fi
 
-        # Run /etc/kernel/postrm.d/ hooks if they exists
-        if [ -d "/etc/kernel/postrm.d" ] ; then
-	    DEB_MAINT_PARAMS=$@ \
-                run-parts --verbose --exit-on-error \
-                    --arg=$RELEASE \
-                    --arg=/boot/kfreebsd-$RELEASE.gz /etc/kernel/postrm.d
+        # Run /etc/kernel/postrm.d/ hooks if they exist
+        if [ -d "/etc/kernel/postrm.d" ]; then
+            echo "Running /etc/kernel/postrm.d hooks..." 1>&2
+            run-parts --verbose --exit-on-error \
+                --arg=$RELEASE \
+                --arg=/boot/kfreebsd-$RELEASE.gz \
+                /etc/kernel/postrm.d
         fi
     ;;
     
