@@ -20,11 +20,27 @@ VERSION="@VERSION@"
 
 case "$1" in
     install|upgrade)
+        # Sanitize and quote maintaner script parameters
+        for p in "$@"; do
+            q="$(echo "$p" | sed -e "s/'/'\\''/g")"
+            DEB_MAINT_PARAMS="$DEB_MAINT_PARAMS '$q'"
+        done
+        export DEB_MAINT_PARAMS
+
         # Run preinst hook if defined
         preinst_hook=$(sed '/^\s*preinst_hook/!d;s/.*=\s*//' $KERNEL_IMG_CONF 2>/dev/null || true)
         if [ -n "$preinst_hook" ] ; then
             echo "Running preinst hook script $preinst_hook." 1>&2 
             $preinst_hook "$VERSION" "/boot/kfreebsd-$RELEASE.gz"
+        fi
+
+        # Run /etc/kernel/preinst.d/ hooks if they exist
+        if [ -d "/etc/kernel/preinst.d" ]; then
+            echo "Running /etc/kernel/preinst.d hooks..." 1>&2
+            run-parts --verbose --exit-on-error \
+                --arg=$RELEASE \
+                --arg=/boot/kfreebsd-$RELEASE.gz \
+                /etc/kernel/preinst.d
         fi
     ;;
 
