@@ -1,9 +1,16 @@
 kfreebsd-8 (8.1-3) unreleased; urgency=high
 
+  [ Aurelien Jarno ]
   * Backport adaptive_machine_arch support from -CURRENT, change and amd64
     machine into i386 for 32-bit binaries.
   * Call postinst/postrm hooks as defined by the "Policy for Linux kernel, 
     initramfs, boot loader update process".
+
+  [ Guillem Jover ]
+  * Polish hooks support:
+    - Sanitize and single quote maintainer script parameters exported
+      as DEB_MAINT_PARAMS environment variable.
+    - Call preinst and prerm hooks too.
 
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 06 Aug 2010 06:58:01 +0200
 
